# FrostyOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build-scripts/: build.sh  build_toolchain.sh  build_tools.sh  download_boot_files.cmake  download_limine_include.cmake  generate_symbol_map.sh  run.sh  update_ovmf.sh
build-scripts/x86_64/: build_gcc.sh
kernel/: CMakeLists.txt
kernel/lib/include/: assert.h  bit  cassert  cerrno  cinttypes  climits  cstddef  cstdint  cstdio  cstdlib  cstring  errno.h  new  new.hpp  spinlock.h  stdio.h  stdlib.h  string.h  util.h
kernel/lib/include/DataStructures/: AVLTree.hpp  Bitmap.hpp  HashMap.hpp  LinkedList.hpp  tree.h
kernel/lib/src/: assert.cpp  errno.c  new.cpp  stack_protector.c  stack_protector.cpp  stdio.cpp  stdlib.c
kernel/lib/src/DataStructures/: AVLTree.cpp  Bitmap.cpp  LinkedList.cpp
kernel/lib/src/arch/x86_64/: spinlock.asm  util.asm
kernel/src/: KernelSymbols.cpp  KernelSymbols.hpp  debug.cpp  debug.h  fworktst.cpp  kernel.cpp  kernel.hpp  limine_entry.cpp
kernel/src/Data-structures/: AVLTree.cpp  AVLTree.hpp  Bitmap.cpp  Bitmap.hpp  LinkedList.cpp  LinkedList.hpp
kernel/src/Graphics/: Colour.cpp  Colour.hpp  Framebuffer.cpp  Framebuffer.hpp  VGA.cpp  VGA.hpp  VGAFont.cpp  VGAFont.hpp
kernel/src/HAL/: HAL.cpp  HAL.hpp  Processor.hpp  Time.cpp  Time.hpp
kernel/src/HAL/ACPI/: HPET.cpp  HPET.hpp  Init.cpp  Init.hpp  MADT.cpp  MADT.hpp  MCFG.cpp  MCFG.hpp  SDT.cpp  SDT.hpp  XSDT.cpp  XSDT.hpp  uACPI.cpp  uACPIAPI.cpp
kernel/src/HAL/drivers/: HPET.cpp  HPET.hpp
kernel/src/Memory/: Heap.cpp  Heap.hpp  MemoryMap.hpp  OOM.cpp  OOM.hpp  PMM.cpp  PMM.hpp  PageFault.cpp  PageFault.hpp  PageManager.cpp  PageManager.hpp  PageMapper.hpp  PageTable.cpp  PageTable.hpp  Pager.cpp  Pager.hpp  PagingUtil.cpp  PagingUtil.hpp  VMM.cpp  VMM.hpp  VMRegion.cpp  VMRegion.hpp  VMRegionAllocator.cpp  VMRegionAllocator.hpp  VirtualMemoryAllocator.cpp  VirtualMemoryAllocator.hpp
kernel/src/Scheduling/: Mutex.hpp  Process.cpp  Process.hpp  Scheduler.cpp  Scheduler.hpp  Semaphore.cpp  Semaphore.hpp  Thread.cpp  Thread.hpp  ThreadList.cpp  ThreadList.hpp
kernel/src/arch/x86_64/: APTrampoline.asm  ArchDefs.asm  ArchDefs.h  CPUID.asm  CPUID.h  E9.cpp  E9.h  GDT.asm  GDT.cpp  GDT.hpp  IO.asm  IO.h  KernelSymbols.cpp  KernelSymbols.hpp  MSR.asm  MSR.h  PIT.cpp  PIT.hpp  Panic.asm  Panic.cpp  Panic.hpp  Processor.asm  Processor.cpp  Processor.hpp  Stack.cpp  Stack.hpp  TSC.asm  TSC.cpp  TSC.hpp  start.asm
kernel/src/arch/x86_64/Memory/: PAT.asm  PAT.cpp  PAT.hpp  PageFault.cpp  PageFault.hpp  PageMapper.cpp  PageMapper.hpp  PageTable.cpp  PageTable.hpp  PageTables.asm  PageTables.cpp  PageTables.hpp  PagingInit.cpp  PagingInit.hpp  PagingUtil.asm  PagingUtil.cpp  PagingUtil.hpp
kernel/src/arch/x86_64/Scheduling/: Task.asm  Task.h  Task.hpp  TaskUtil.cpp  TaskUtil.hpp
kernel/src/arch/x86_64/interrupts/: IDT.asm  IDT.cpp  IDT.hpp  IRQ.cpp  IRQ.hpp  ISR.asm  ISR.cpp  ISR.hpp  NMI.cpp  NMI.hpp  PIC.cpp  PIC.hpp
kernel/src/arch/x86_64/interrupts/APIC/: IOAPIC.cpp  IOAPIC.hpp  IPI.cpp  IPI.hpp  LAPIC.cpp  LAPIC.hpp  LocalAPIC.cpp  LocalAPIC.hpp
kernel/src/fs/: VFS.cpp  VFS.hpp
kernel/src/fs/TempFS/: TempFS.cpp  TempFS.hpp
kernel/src/sanitiser/: sanitiser.cpp  ubsan.c
kernel/src/sanitisers/: sanitisers.cpp  sanitisers.h  ubsan.c
kernel/src/tty/: TTY.cpp  TTY.hpp  TTYBackend.cpp  TTYBackend.hpp
kernel/src/tty/backends/: DebugBackend.cpp  DebugBackend.hpp  VGABackend.cpp  VGABackend.hpp
tools/: CMakeLists.txt
tools/src/: buildsymboltable.cpp
